--- a/index.html
+++ b/index.html
@@ -1,89 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>documnet</title>
-    <style>
-       .bg{
-       background-color:aqua;
-       }
-       .button1{
-            border-radius: 50%;
-            height:30px;
-            width:30px
-        }
-        #div2
-        {
-            border:10px solid green;
-            width: 30%;
-            height: 40px;
-            padding: 10px 30px;
-            margin-left: 30vw;
-            margin-top: 50px;
-           
-        }
-        input{
-            width:200px;
-            height: 30px;
-        }
-        #submit
-        {
-            width:200px;
-            height: 30px;   
-        }
-    </style>
+    <title>Designed by Sarvagya Bansal</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/5a010fa73c.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <div style = "max-width: 80%; margin: 0 auto 0 auto; border: 5px solid green; padding: 20px 10px">
-        <h2 style = "text-align: center; text-decoration: underline;">SEARCH YOU FAVOURITE MOVIE</h2>
-        <input type = "text" id = "pic" placeholder = "Search here.." />
-        <button id = "submit" onclick="abc()">Search</button>
+    <div id="full">
+        <div id="top">
+            <div id="matter">
+                <div id="buttons">
+                    <div class="hover">
+                        <div class="boxes" id="box1"></div>
+                    </div>
+                    <div class="hover">
+                        <div class="boxes" id="box2"></div>
+                    </div>
+                    <div class="hover">
+                        <div class="boxes" id="box3"></div>
+                    </div>
+                    <div class="hover">
+                        <div class="boxes" id="box4"></div>
+                    </div>
+                </div>
+                <div id="two">
+                    <div id="plus">+</div>
+                    <div id="dust"><i class="fa-regular fa-popcorn"></i></div>
+                </div>
+            </div>
 
-       
-    </div>
-    <div id="div2">
-        <button onclick="functiona1()" class="button1" id="buttonnnn1" style="border-color: red;"></button>
-        <button onclick="functiona2()" class="button1" id="buttonnnn2" style="border-color: blue;"></button>
-        <button onclick="functiona3()" class="button1" id="buttonnnn3" style="border-color: black;"></button>
-        <button onclick="functiona4()" class="button1" id="buttonnnn4" style="border-color: yellow;"></button>
-        <button onclick="functiona5()" class="button1" id="buttonnnn5" style="border-color: pink;"></button>
-    </div>
-    <div id = "demo"></div>
-    <script>
-        function abc() {
-  var name = document.getElementById('pic').value;
-  document.getElementById('demo').innerHTML = '';
-  var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-      var response = JSON.parse(this.responseText);
-      for(var i = 0; i < response.length; i++){
-        let r = response[i].show.image.medium;
-        document.getElementById('demo').innerHTML = document.getElementById('demo').innerHTML + `<img src ='${r}' />`;
-      }
-    }
-  };
-  xhttp.open("GET", `https://api.tvmaze.com/search/shows?q=${name}`, true);
-  xhttp.send();
-}
+        </div>
+        <div id="second">
+        </div>
+        <div id="bigbox">
+            <div id="part1">
+                <input id="text" type="text">
+            </div>
+            <div id="part2">
+                <div id="white">
+                    <div id="box11"></div>
+                    <div id="box22"></div>
+                    <div id="box33"></div>
+                    <div id="box44"></div>
+                </div>
+            </div>
 
-function functiona1(){
-    document.body.style.backgroundColor="red";
-}
-function functiona2(){
-    document.body.style.backgroundColor="blue";
-}
-function functiona3(){
-    document.body.style.backgroundColor="black";
-}
-function functiona4(){
-    document.body.style.backgroundColor="yellow";
-}
-function functiona5(){
-    document.body.style.backgroundColor="pink";
-}
-    </script>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
